[PE] Allow blending for svg root etc.

Bug: 872437
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Idb0d69320ddfa2dcfe02e493cd117573618459d5
Reviewed-on: https://chromium-review.googlesource.com/1169624
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582299}
Former-commit-id: 8a5a0362ca70fe20e8473f1dc720c86f3eb1bc36